# GoogleTestLearning

./: .gitignore  CMakeLists.txt  compilerConfig.cmake
Factorial/: CMakeLists.txt  Factorial.cpp  Factorial.h
Factorial/Test/: CMakeLists.txt  FactorialTest.cpp
Prime/: CMakeLists.txt  PrimeNumbers.cpp  PrimeNumbers.h
Prime/Test/: CMakeLists.txt  PrimeNumbersTest.cpp
Vector/: CMakeLists.txt  Vector.h
Vector/Test/: CMakeLists.txt  VectorTest.cpp
